@@ -1,3 +1,9 @@
+2008-09-26  Tor Lillqvist  <tml@novell.com>
+
+	* gmodule-win32.c: Improve error reporting: When g_module_open()
+	fails, include the name of the module passed to LoadLibrary() in
+	what g_module_error() returns.
+
 2008-09-17  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.18.1 ===
